# ADAPT-MCL

./: .gitignore  README.md  evaluate.sh  results.md
docker/: .env  Dockerfile  docker-compose.rviz.yaml  docker-compose.yaml
src/adapt_mcl/: CMakeLists.txt  package.xml
src/adapt_mcl/include/adapt_mcl/: likelihood_field.hpp  motion_model.hpp  particle.hpp  particle_filter.hpp  soft_em_model.hpp
src/adapt_mcl/src/: likelihood_field.cpp  motion_model.cpp  particle_filter.cpp  soft_em_model.cpp
src/adapt_mcl/test/: test_likelihood_field.cpp  test_particle_filter.cpp  test_soft_em_model.cpp
src/lilocbench_ros/: CMakeLists.txt  package.xml
src/lilocbench_ros/config/: default.rviz  params.yaml
src/lilocbench_ros/include/lilocbench_ros/: tum_logger.hpp
src/lilocbench_ros/launch/: dynamics_0.launch  dynamics_1.launch  dynamics_2.launch  dynamics_3.launch  dynamics_4.launch  localize.launch  lt_changes_0.launch  lt_changes_1.launch  lt_changes_2.launch  lt_changes_3.launch  lt_changes_4.launch  lt_changes_5.launch  lt_changes_dynamics_0.launch  lt_changes_dynamics_1.launch  mapping.launch  static_0.launch  static_1.launch  static_2.launch  static_3.launch  static_4.launch  static_5.launch  static_6.launch
src/lilocbench_ros/scripts/: eval.py  run_all_sequences.sh
src/lilocbench_ros/src/: localizer_node.cpp  tum_logger.cpp
